8276227: ciReplay: SIGSEGV if classfile for replay compilation is not present after JDK-8275868

Reviewed-by: mdoerr
Backport-of: a1f4c428ba1b78a4e18afb87c94a5c731a5aa706